Implemented max length on input fields

--- a/public/views/addClient.html
+++ b/public/views/addClient.html
@@ -29,12 +29,12 @@
                 
                 <div class="row">
                     <label for="cName">Client Name:</label>
-                    <input type="text" name="cName" ng-model="client.cName">
+                    <input type="text" name="cName" maxlength="25" ng-model="client.cName">
                 </div>
                 
                 <div class="row">
                     <label for="email">Manager's Email:</label>
-                    <input type="email" name="email" ng-model="client.email">
+                    <input type="email" name="email" maxlength="254" ng-model="client.email">
                 </div>
                 
 
