--- a/public/views/newConversation.html
+++ b/public/views/newConversation.html
@@ -5,7 +5,7 @@
 	=====================================
 -->	
 
-<div class="row page-header pushDown">
+<div class="row page-header">
     
     <a ng-href="/#/conversations"><h1 id="login-logo">My Conversations</h1></a>
     
