--- a/public/views/team.html
+++ b/public/views/team.html
@@ -26,9 +26,11 @@
         <div class="panel-body" ng-show="panelOpen">
        
             <div class="row">
-                <button type="submit" class="submit"  ng-click="message(member)">
-                    New Message
-                </button>
+                <a href="#/newConversation">
+                    <button class="submit" >
+                        New Conversation
+                    </button>
+                </a>
             </div>
         </div>
         
