--- a/public/views/clients.html
+++ b/public/views/clients.html
@@ -20,7 +20,7 @@
 <div class="row">
     <div class="row">
         
-         <div class="panel panel-dropdown" ng-repeat="client in clients" >
+         <div class="panel" ng-repeat="client in clients" >
         
             <div class="panel-head" ng-click="panelOpen = !panelOpen">
             
@@ -28,6 +28,7 @@
                 
             </div>
 
+<!--
             <div class="panel-body" ng-show="panelOpen">
 
                 <div class="row">
@@ -36,6 +37,7 @@
                     </button>
                 </div>
             </div>
+-->
         </div>
 </div>
 </div>
