Added fallback content that lets the user know there are no conversations created yet. Also removed the forgot password from the login form.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -29,6 +29,13 @@ body{
     padding-bottom: 20px;
 }
 
+.hidden-anchor{
+    color: black;
+}
+.hidden-anchor:visited{
+    color: black;
+}
+
 /*Top Nav*/
 #top-nav, #btm-nav{
     position: fixed;
