Added a bottom margin to the views section to prevent viewport from cutting the page right after the panel is loaded.

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -44,6 +44,12 @@ body{
     background-color: #F2F0F0;
 }
 
+.views-section-logged-off, .views-section{
+
+    margin-bottom: 75px;
+    
+}
+
 .views-section{
     margin-top: 100px;
 }
